# Obsidian-Language

./: .gitignore  CMakeLists.txt  CMakeListsOld.txt  README.md  ideas.txt  todo.txt
RealCompilerSrc/: Lexer.cpp  Misc.hpp  Options.cpp  PreTokenize.cpp  PreTokenize.hpp  Preprocessor.cpp  Utils.hpp  main.cpp
demos/: hello.ob
lib/: builtin.os
onyx-lib/: c-header.h
src/: AST.cpp  AST.hpp  AST_Output.cpp  AST_Output.hpp  AST_Printer.cpp  AST_Printer.hpp  AstInterpreter.cpp  AstInterpreter.hpp  AstToIR.cpp  AstToIR.hpp  AutoPtr.hpp  BuiltIn.cpp  BuiltIn.hpp  CFG.cpp  CFG.hpp  CGen.cpp  CGen.hpp  CSElim.cpp  CSElim.hpp  C_Backend.cpp  C_Backend.hpp  CallGraph.cpp  CallGraph.hpp  Common.cpp  Common.hpp  ConstantProp.cpp  ConstantProp.hpp  CppGen.cpp  CppGen.hpp  Dataflow.cpp  Dataflow.hpp  DeadCodeElim.cpp  DeadCodeElim.hpp  DeferredLookup.hpp  Dotfile.cpp  Dotfile.hpp  Expression.cpp  Expression.hpp  Grammar.oxg  Grammar.txt  (+51 more)
src/variadic-variant/: variant.h
test/: Arithmetic.gold  Arithmetic.os  Assertions.gold  Assertions.os  CMakeLists.txt  CStyleLoops.gold  CStyleLoops.os  Casting.gold  Casting.os  DefaultMemberValue.gold  DefaultMemberValue.os  FirstClassMethods.os  FirstClassSubrs.gold  FirstClassSubrs.os  FuncPatternMatching.os  GeneralTestDriver.cpp  HelloWorld.os  IterMultidim.os  IterStringArray.gold  IterStringArray.os  LexerFuzzing.cpp  LexerFuzzing.hpp  Overloading.gold  Overloading.os  ParserFuzzing.cpp  ParserFuzzing.hpp  Primes.os  RecursiveFibonacci.gold  RecursiveFibonacci.os  ShadowingErrorLocal.gold  ShadowingErrorLocal.os  ShadowingErrorParam.gold  ShadowingErrorParam.os  ShadowingModuleOK.os  Sierpinski.os  Sorting.gold  Sorting.os  Structs.gold  Structs.os  Switch.gold  (+11 more)
